--- a/app/src/main/res/layout/achievement_unlock_details_screen_layout.xml
+++ b/app/src/main/res/layout/achievement_unlock_details_screen_layout.xml
@@ -96,7 +96,7 @@
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="50dp"
                     android:background="@drawable/achievements_details_completed_area_bg"
-                    android:visibility="gone"
+                    android:visibility="visible"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -110,23 +110,36 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="30dp"
-                        android:background="@drawable/top_ten_players_bg"
+                        android:background="@drawable/xp_progress_bar"
                         android:padding="1dp"
                         app:indicatorColor="#F39949"
-                        app:layout_constraintEnd_toEndOf="parent"
-
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:trackColor="#F8F0DD"
                         app:trackCornerRadius="150dp"
-                        app:trackThickness="20dp" />
+                        app:trackThickness="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        />
+
+                    <TextView
+                        android:id="@+id/progress_count"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/achievement_details_lock_progress_bar"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginTop="10dp"
+                        android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                        android:fontFamily="@font/claritycity_bold"
+                        android:textColor="#EA984A"
+                        android:text="78/100"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                     <TextView
                         android:id="@+id/incomplete_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginEnd="30dp"
                         android:background="@drawable/top_ten_players_bg"
                         android:fontFamily="@font/dinish_regular"
@@ -137,7 +150,7 @@
                         android:textSize="12dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/achievement_details_lock_progress_bar" />
+                        app:layout_constraintTop_toBottomOf="@+id/progress_count" />
                     <View
                         android:id="@+id/achievement_details_lock_view_one"
                         android:layout_width="match_parent"
@@ -253,7 +266,7 @@
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="50dp"
                     android:background="@drawable/achievements_details_completed_area_bg"
-                    android:visibility="visible"
+                    android:visibility="gone"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
