--- a/app/src/main/res/layout/available_trails_layout.xml
+++ b/app/src/main/res/layout/available_trails_layout.xml
@@ -17,6 +17,8 @@
         android:text="AVAILABLE TRAILS"
         android:textColor="#4B3B30"
         android:textSize="@dimen/trail_list_title_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -28,14 +30,15 @@
         android:layout_marginEnd="30dp"
         android:gravity="center_vertical"
         android:src="@drawable/up_arrow"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainTitle" />
 
     <View
         android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/trail_selection_top_line"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@id/upArrow" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:id="@+id/row1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,38 +61,34 @@
             android:id="@+id/image1"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/wild_about_twlight_icon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignParentStart="true"
+            android:src="@drawable/breadcrumbs_trail" />
+
 
         <TextView
             android:id="@+id/trailOne"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/image1"
             android:fontFamily="@font/claritycity_semibold"
-            android:text="Wild About Twilight Trail"
+            android:text="Pioneer Trail"
             android:textColor="@color/black"
-            android:textSize="@dimen/trail_list_item_size"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/radioBtn1"
-            app:layout_constraintStart_toEndOf="@+id/image1"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="@dimen/trail_list_item_size" />
+
 
         <ImageView
+
             android:id="@+id/radioBtn1"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/radio_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/radio_button" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/row2"
@@ -106,7 +105,7 @@
             android:id="@+id/image2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/trail_kampong_icon"
+            android:src="@drawable/wild_about_twlight_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -119,7 +118,7 @@
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/image2"
             android:fontFamily="@font/claritycity_semibold"
-            android:text="Kampong Glam Trail"
+            android:text="Wild About Twilight Trail"
             android:textColor="@color/black"
             android:textSize="@dimen/trail_list_item_size"
             app:layout_constrainedWidth="true"
@@ -156,7 +155,7 @@
             android:id="@+id/image3"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/breadcrumbs_trail"
+            android:src="@drawable/trail_kampong_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -168,7 +167,7 @@
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/image3"
             android:fontFamily="@font/claritycity_semibold"
-            android:text="Pioneer Trail"
+            android:text="Kampong Glam Trail"
             android:textColor="@color/black"
             android:textSize="@dimen/trail_list_item_size"
             app:layout_constrainedWidth="true"
@@ -266,6 +265,8 @@
         android:layout_marginTop="@dimen/trail_list_uparrow_margin_top"
         android:layout_marginEnd="30dp"
         android:src="@drawable/down_arrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view2" />
 
     <Button
