--- a/app/src/main/res/layout/faq_layout.xml
+++ b/app/src/main/res/layout/faq_layout.xml
@@ -869,6 +869,7 @@
 
     </ScrollView>
     <TextView
+        android:visibility="gone"
         android:id="@+id/website_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
