--- a/app/src/main/res/layout/friends_list_layout.xml
+++ b/app/src/main/res/layout/friends_list_layout.xml
@@ -5,7 +5,15 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/discover_details_bg">
-
+    <ImageView
+        android:id="@+id/friend_list_screen_loaderImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/friends_list_screen_backButton"
         android:layout_width="40dp"
