--- a/app/src/main/res/layout/user_profile_screen_layout.xml
+++ b/app/src/main/res/layout/user_profile_screen_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/discover_details_bg">
@@ -24,13 +25,13 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             android:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/profile_edit_screen_title_tv"
@@ -83,8 +84,8 @@
 
                 <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/profile_edit_screen_profile_pic_iv"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
                     android:src="@mipmap/breadcrumbs_app_icon_round"
@@ -93,7 +94,7 @@
                     app:layout_constraintTop_toTopOf="@+id/profile_edit_screen_title_border_line" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/profile_screen_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -105,28 +106,76 @@
                     app:layout_constraintTop_toTopOf="@+id/profile_edit_screen_profile_pic_iv" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/profile_screen_user_level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/claritycity_semibold"
-                    android:text="RECRUIT LV. 1"
+                    android:layout_marginTop="2dp"
+                    android:fontFamily="@font/dinish_bold"
                     android:textColor="#4B3B30"
+                    android:text="RECRUIT LV. 1"
                     app:layout_constraintStart_toEndOf="@+id/profile_edit_screen_profile_pic_iv"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_user_name" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="7dp"
+                    android:layout_height="7dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@drawable/trail_banner_dot"
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_screen_user_level"
+                    app:layout_constraintStart_toEndOf="@+id/profile_screen_user_level"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_user_name"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/profile_screen_xp_point_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2dp"
+                    android:fontFamily="@font/dinish_bold"
+                    android:text="000 XP"
+                    android:textColor="#4B3B30"
+
+                    app:layout_constraintBottom_toBottomOf="@+id/profile_screen_user_level"
+                    app:layout_constraintStart_toEndOf="@+id/imageView6"
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_user_name" />
+                <TextView
+                    android:id="@+id/xp_to_next_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/dinish_bold"
+                    android:textColor="#4B3B30"
+                    android:text="000 XP TO LV 0"
+
+                    app:layout_constraintStart_toEndOf="@+id/profile_edit_screen_profile_pic_iv"
+
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_user_level" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/determinateBar"
+                    android:id="@+id/profile_screen_progress_bar"
                     android:layout_width="0dp"
                     android:layout_height="10dp"
+
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="15dp"
-                    app:indicatorColor="#CD462A"
+                    android:background="@drawable/xp_progress_bar"
+                    android:padding="1dp"
+                    app:indicatorColor="#F39949"
+                    app:trackColor="#F8F0DD"
+                    app:trackCornerRadius="150dp"
+                    app:trackThickness="20dp"
                     app:layout_constraintBottom_toBottomOf="@+id/profile_edit_screen_profile_pic_iv"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/profile_edit_screen_profile_pic_iv"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                    app:layout_constraintTop_toBottomOf="@+id/xp_to_next_level" />
+
+
 
                 <TextView
                     android:id="@+id/achievement_title"
@@ -140,7 +189,7 @@
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/determinateBar" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_progress_bar" />
 
                 <ImageView
                     android:id="@+id/achievement_edit_icon"
@@ -151,7 +200,7 @@
                     android:src="@drawable/achievement_edit_icon"
                     app:layout_constraintBottom_toBottomOf="@+id/achievement_title"
                     app:layout_constraintStart_toEndOf="@+id/achievement_title"
-                    app:layout_constraintTop_toBottomOf="@+id/determinateBar" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_screen_progress_bar" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/achievementLayout"
@@ -213,8 +262,8 @@
                         android:id="@+id/achievement_icon_five"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/lock_achievement"
                         android:layout_marginEnd="30dp"
+                        android:src="@drawable/lock_achievement"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.8"
                         app:layout_constraintStart_toEndOf="@+id/achievement_icon_four"
@@ -270,6 +319,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <TextView
+                                android:id="@+id/completed_poi_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:paddingStart="15dp"
@@ -326,6 +376,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <TextView
+                                android:id="@+id/completed_trail_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:paddingStart="15dp"
@@ -369,18 +420,13 @@
                     app:layout_constraintTop_toBottomOf="@+id/postTitle" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/post_screen_friend_post_list"
+                    android:id="@+id/profile_screen_user_post_list"
                     android:layout_width="match_parent"
-
-                    android:layout_height="0dp"
-                    android:layout_marginTop="10dp"
-
-                    app:layout_constraintBottom_toBottomOf="parent"
-
+                    android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.56"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/selected_player_post_border_line" />
+                    app:layout_constraintTop_toBottomOf="@+id/selected_player_post_border_line"
+                    tools:listitem="@layout/creator_post_adapter" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
